2024-04-27T01:12:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8856168547 # 435
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-27
* notice: query file size: 24666
* notice: accum prev / next / diff: re vi: 0 301 / 0 302 / +0 +1

2024-04-26T20:18:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8853822150 # 434
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-26
* notice: query file size: 24529
* notice: accum prev / next / diff: re vi: 0 300 / 0 301 / +0 +1

2024-04-24T16:20:37Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8819888207 # 421
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-24
* notice: query file size: 24664
* notice: accum prev / next / diff: re vi: 0 298 / 0 300 / +0 +2

2024-04-23T20:17:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8806674308 # 416
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-23
* notice: query file size: 24493
* notice: accum prev / next / diff: re vi: 0 297 / 0 298 / +0 +1

2024-04-22T04:20:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8778439641 # 406
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-22
* notice: query file size: 24487
* notice: accum prev / next / diff: re vi: 0 296 / 0 297 / +0 +1

2024-04-20T01:12:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8761471979 # 393