@@ -1,3 +1,9 @@
+2024-04-27T12:28:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8859813688 # 438
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-27
+* notice: query file size: 24501
+* notice: accum prev / next / diff: re vi: 0 302 / 0 303 / +0 +1
+
 2024-04-27T01:12:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8856168547 # 435
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-27
